[project]
name = "eh-smb-mcp"
version = "0.2.1"
description = "MCP server for SMB/CIFS network filesystem access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pysmb>=1.2.9",
    "pydantic>=2.0.0",
]

[project.scripts]
eh-smb-mcp = "smb_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smb_mcp"]
